Moving along! Next TODOs: TODO add controls, lockscreen controls, album art and track info to Now Playing bar, which is now running. Woo! TODO shareintent for the currently-playing track that also exposes the spotify URL. TODO settings menu for changing the country code, and turning off the Now Playing stuff.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="top_ten_tracks">Top Ten Tracks</string>
     <string name="no_network_error">No network connection available, please try again later</string>
     <string name="no_songs_found">No tracks for this artist are available</string>
+    <string name="now_playing">Now Playing:</string>
 </resources>
